--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Elk Finder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -27,7 +27,7 @@
       }
 
       /* Landscape phones and down */
-      @media (max-width: 979px) {
+      @media (max-width: 640px) {
         .copy {
           padding: 2.5% 10%;
         }
@@ -70,6 +70,9 @@
       .video, .thermometer, .order, .social, .statistics {
         text-align: center;
       }
+      .social {
+        padding: 3%;
+      }
       .statistics h3, .statistics p {
         color: white;
       }
@@ -106,7 +109,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Elk Finder</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -122,35 +125,35 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>Elk Finder</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
+          <p class="lead"> The world's first human-elk dating site: find like-minded elk in your area, for grazing, companionship and maybe more.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://billdraker.com/cpg/albums/userpics/10002/_U8Z5946_Bull_Elk_Bugling_in_Snow.jpg">
         </div>
        
         <div class="span5 actions">
           <div class="span8 offset2">
             <div class="statistics">
-              <div class="span4">
+              <div class="span3">
                 <div class="linediv-l">
-                  <h3>1000</h3> <p>backers</p>
+                  <h3>42</h3> <p>backers</p>
                 </div>
               </div>
-              <div class="span4">
+              <div class="span6">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>£2000</h3> <p>of £20,000</p>
                 </div>
               </div>
-              <div class="span4">
+              <div class="span3">
                 <div class="linediv-r">
-                  <h3>10</h3> <p>days left</p>
+                  <h3>27</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -158,12 +161,12 @@
   
           <div class="span10 offset1">
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 10%;"></div>
+              <div class="bar bar-warning" style="width: 90%;"></div>
             </div>
           </div>
   
-          <div class="span6 offset3 order">
+          <div class="span8 offset2 order">
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
           <div class="span8 offset2 social">Social</div>
@@ -174,24 +177,22 @@
       </div>
 
       <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+        <div class="span3 offset1 asset">
+          <img class="img-polaroid" width="240" height="150" src="http://farm1.staticflickr.com/42/78095726_d0e7a48223_o.jpg">
         </div>
-        <div class="span5 copy">
+        <div class="span7 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Elk Finder employs sophisticated matching algorithms to link you with your ideal antlered associate. You can enter your preferred shade of fur, eating habits and even favourite hobbies, such as foraging in snow and being hunted, and Elk Finder will do the rest.
           </p>
         </div>
       </div>
 
       <div class="row-fluid section2">
-        <div class="span5 offset1 copy copy-right">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+        <div class="span7 offset1 copy copy-right">
+          <p> Elk Finder is guaranteed family friendly, so you can be confident that the junior elk-lover in your life will be able to find exactly the right friend here. Here at Elk Finder, we believe that life-long friendships start early.</p>
         </div>
-        <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+        <div class="span3 asset">
+          <img class="img-polaroid" width="240" height="150" src="http://farm1.staticflickr.com/24/94966272_bf609c2da4_z.jpg?zz=1">
         </div>
       </div>
 
@@ -202,18 +203,18 @@
           <div class="accordion" id="accordion2">
             <div class="accordion-group">
               <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What does FAQ stand for?</a>
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What is an elk?</a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
-                <div class="accordion-inner">Frequently Asked Questions.</div>
+                <div class="accordion-inner">It's basically the same as a moose.</div>
               </div>
             </div>
             <div class="accordion-group">
               <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">What's a Frequently Asked Question?</a>
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">What is a moose?</a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
-                <div class="accordion-inner">A question that is asked frquently.</div>
+                <div class="accordion-inner">Kinda like a deer, only bigger and with a <strong>much</strong> cooler name.</div>
               </div>
             </div>
           </div>
