--- a/index.html
+++ b/index.html
@@ -134,13 +134,14 @@
         </div>
       </div>
       <div class="row-fluid pitch">
-        <div class="span5 offset1 video">
+
+        <div class="span6 video">
           <img class="img-polaroid" src="http://billdraker.com/cpg/albums/userpics/10002/_U8Z5946_Bull_Elk_Bugling_in_Snow.jpg">
         </div>
        
-        <div class="span5 actions">
-          <div class="span8 offset2">
-            <div class="statistics">
+        <div class="span6 actions">
+
+          <div class="span12 statistics">
               <div class="span3">
                 <div class="linediv-l">
                   <h3>42</h3> <p>backers</p>
@@ -156,7 +157,6 @@
                   <h3>27</h3> <p>days left</p>
                 </div>
               </div>
-            </div>
           </div>
   
           <div class="span10 offset1">
@@ -173,7 +173,9 @@
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+
         </div>
+
       </div>
 
       <div class="row-fluid section1">
