Actually did fix medium-width rendering glitch.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
        
         <div class="span6 actions">
 
-          <div class="span12 statistics">
+          <div class="span10 offset1 statistics">
               <div class="span3">
                 <div class="linediv-l">
                   <h3>42</h3> <p>backers</p>
