Fixed missing row-fluid tags

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
        
         <div class="span6 actions">
 
-          <div class="span10 offset1 statistics">
+          <div class="row-fluid">
+            <div class="span10 offset1 statistics">
               <div class="span3">
                 <div class="linediv-l">
                   <h3>42</h3> <p>backers</p>
@@ -157,21 +158,28 @@
                   <h3>27</h3> <p>days left</p>
                 </div>
               </div>
+            </div>
           </div>
-  
-          <div class="span10 offset1">
-            <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 10%;"></div>
-              <div class="bar bar-warning" style="width: 90%;"></div>
+
+          <div class="row-fluid">  
+            <div class="span10 offset1">
+              <div class="thermometer progress active">
+                <div class="bar bar-success" style="width: 10%;"></div>
+                <div class="bar bar-warning" style="width: 90%;"></div>
+              </div>
             </div>
           </div>
   
-          <div class="span8 offset2 order">
-            <button class="btn btn-success btn-large">Preorder</button>
+          <div class="row-fluid">  
+            <div class="span8 offset2 order">
+              <button class="btn btn-success btn-large">Preorder</button>
+            </div>
           </div>
-          <div class="span8 offset2 social">Social</div>
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+          <div class="row-fluid">  
+            <div class="span8 offset2 social">
+              <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+              <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+            </div>
           </div>
 
         </div>
