--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <script type="text/javascript">
     
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-XXXXX-X']);
+      _gaq.push(['_setAccount', 'UA-43084412-1']);
       _gaq.push(['_trackPageview']);
     
       (function() {
