Added bitcoin preorder button

--- a/index.html
+++ b/index.html
@@ -189,7 +189,12 @@
   
           <div class="row-fluid">  
             <div class="span8 offset2 order">
-              <button class="btn btn-success btn-large">Preorder</button>
+
+              <!-- Bitcoin button code -->
+              <a class="coinbase-button" data-code="36bbe8f577605dbc7f2c1695ed20d953" data-button-style="custom_small" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/36bbe8f577605dbc7f2c1695ed20d953">Preorder with Bitcoin</a>
+              <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+              <!-- End Bitcoin thingy -->
+
             </div>
           </div>
           <div class="row-fluid">  
